--- a/source/_posts/记一次应对挖矿程序的经历.md
+++ b/source/_posts/记一次应对挖矿程序的经历.md
@@ -8,6 +8,8 @@ tags:
 
 之前为了远程调试redis，于是将服务器上的redis绑定到了公网IP上。后来上redis时发现多了两个key，查看了这两个key发现里面是curl和wget命令，于是猜到有人远程下载了脚本，但是下载的地址已经失效了。后来检查服务器的资源占用，果然cpu占用间断性的会飙到100%，显然被人用来挖矿了。
 
+<!-- more --> 
+
 ## 二、关于漏洞的猜测
 
 redis绑定到公网IP上很容易中招，网上全是类似的帖子（主要还是安全上没有配置好，然后使用了root用户运行了redis-server，感觉自己的辣鸡服务器不会被人盯上的）。检查了一下redis的配置，dbfilename被设置成～/.ssh/authorized_keys。原来是将自己的ssh公钥存到redis的key，然后备份key就将他的公钥存到了authorized_keys成功免密登录了。
